--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="scheme7">#4ca1af</color>
     <color name="scheme9">#4f7fca</color>
     <color name="topColor">#f29492</color>
+    <color name="white_grey">#E5E6EB</color>
 
 </resources>
