--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <!--  Manual Colours  -->
     <color name="white">#ffffff</color>
+    <color name="white_grey">#E5E6EB</color>
+    <color name="green">#2E7D32</color>
     <color name="grey">#9C9797</color>
     <color name="black">#000000</color>
     <color name="light_orange">#f6a412</color>
@@ -23,6 +25,5 @@
     <color name="scheme7">#4ca1af</color>
     <color name="scheme9">#4f7fca</color>
     <color name="topColor">#f29492</color>
-    <color name="white_grey">#E5E6EB</color>
 
 </resources>
