--- a/app/src/main/res/layout/activity_upcoming_contest.xml
+++ b/app/src/main/res/layout/activity_upcoming_contest.xml
@@ -69,13 +69,26 @@
                 android:visibility="visible"
 
                 android:id="@+id/relparent">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:background="@drawable/pink_round_button"
                     android:layout_height="wrap_content">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerContest"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:nestedScrollingEnabled="false"
+                        tools:listitem="@layout/layout_contest_item_small"
+                        android:orientation="horizontal"
+                        tools:itemCount="10"
+                        android:background="@color/black"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@+id/recyclerContest"
+
                         android:gravity="center_horizontal"
                         android:layout_centerHorizontal="true"
                         android:orientation="horizontal">
@@ -87,6 +100,7 @@
                             android:layout_marginBottom="10dp"
 
                             android:orientation="vertical">
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
